--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <title>CodePen - Day 1 - 7DaysOfCode - Alura</title>
-  
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <title>Número Secreto</title>
 </head>
 <body>
-<!-- partial:index.partial.html -->
-
-<!-- partial -->
-  <script  src="./script.js"></script>
-
+    <h1>Acerta o Número Secreto</h1>
 </body>
 </html>
