lógica menor/maior valor e interação html

--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
         <span class="box">20</span>
         <div>O número secreto é <i class="fa-solid fa-arrow-up"></i></div>
     </div>
+
+    <script src="assets/js/sortear.js"></script>
 </body>
 </html>
