consumindo o web speech API com reconhecimento de voz

--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
     </div>
 
     <script src="assets/js/sortear.js"></script>
+    <script src="assets/js/reconhecimentoVoz.js"></script>
 </body>
 </html>
