exibindo na tela o que foi falado

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <h3>O número secreto está entre <span id="menor-valor"></span> e <span id="maior-valor"></span></h3>
 
     <div id="chute" class="mensagem">
-        <div>Você disse:</div>
+        <!--<div>Você disse:</div>
         <span class="box">20</span>
-        <div>O número secreto é <i class="fa-solid fa-arrow-up"></i></div>
+        <div>O número secreto é <i class="fa-solid fa-arrow-up"></i></div>-->
     </div>
 
     <script src="assets/js/sortear.js"></script>
