mansagens feedback da voz na tela

--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
 
     <script src="assets/js/sortear.js"></script>
     <script src="assets/js/reconhecimentoVoz.js"></script>
+    <script src="assets/js/validacao.js"></script>
 </body>
 </html>
